<resources>
    <string name="app_name">AppCheckVeiculos</string>
    <string name="app_check_veiculos">App Check Veiculos</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_text_cadastro">Crie sua conta</string>
    <string name="cadastro_text_cadastro">Cadastrar!</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_sair">Sair</string>

    <string name="menu_veiculos">Meus veículos</string>
    <string name="menu_fipe_consulta">Consultar FIPE</string>

    <string name="veiculo_title_cadastro">Novo veículo</string>
    <string name="veiculo_title_atualizar">Atualizar veículo</string>
    <string name="veiculo_text_cadastro">Salvar</string>

    <string name="fipe_text_mes_referencia">Mês de referência</string>
    <string name="fipe_text_marca">Marca do veículo</string>
    <string name="fipe_text_modelo">Modelo do veículo</string>
    <string name="fipe_text_ano">Ano do veículo</string>
    <string name="fipe_btn_consultar">Consultar</string>
    <string name="veiculos_not_found">Nenhum veículo encontrado.</string>
</resources>
