<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="30dp"
    tools:context=".activities.ui.home.HomeFragment">

    <TextView
        android:id="@+id/fipeTextViewMesReferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/fipe_text_mes_referencia"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/fipeSpinnerMesReferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fipeTextViewMesReferencia" />

    <TextView
        android:id="@+id/fipeTextViewMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/fipe_text_marca"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fipeSpinnerMesReferencia" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/fipeSpinnerMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fipeTextViewMarca" />

    <TextView
        android:id="@+id/fipeTextViewModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/fipe_text_modelo"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fipeSpinnerMarca" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/fipeSpinnerModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fipeTextViewModelo" />

    <TextView
        android:id="@+id/fipeTextViewAno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/fipe_text_ano"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fipeSpinnerModelo" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/fipeSpinnerAno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fipeTextViewAno" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fipeButtonConsulta"
        style="@style/Button"
        android:layout_marginTop="60dp"
        android:text="@string/fipe_btn_consultar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fipeSpinnerAno" />

</androidx.constraintlayout.widget.ConstraintLayout>